# magpie_perception

./: .gitignore  README.md  pyproject.toml  requirements.txt
perception/: label.py  label_dino.py  label_owlv2.py  label_owlvit.py  mask.py
src/magpie_perception/: label.py  label_dino.py  label_owlv2.py  label_owlvit.py  mask.py  mask_sam.py  mask_sam2.py  pcd.py  utils.py
tests/: test_detic.ipynb  test_dino.ipynb  test_dino_sam2.ipynb  test_frame_shift.ipynb  test_owlv2.ipynb  test_owlvit.ipynb  test_sam.ipynb
